guard a remaining m_closeView pointer

BUG: 297234